# EvoMotif

./: .gitignore  .zenodo.json  BRCA1_ANALYSIS_RESULTS.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETE_ANALYSIS_README.md  COMPLETE_TESTING_SUMMARY.md  CONTRIBUTING.md  GETTING_STARTED.md  HOW_TO_VIEW_RESULTS.md  PIPELINE_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v0.1.1.md  RELEASE_v0.1.5.md  STATISTICS_METHODS.md  USER_GUIDE.md  pyproject.toml  requirements.txt  setup.py  test_final_integration.py  view_results.py
.github/workflows/: ci.yml
docs/: COMPLETE_GUIDE.md  api.md  index.md  installation.md  tutorial.md
evomotif/: __init__.py  alignment.py  conservation.py  motif_discovery.py  phylogeny.py  pipeline.py  retrieval.py  stats.py  structure.py  variants.py
examples/: 01_simple_analysis.py  README.md  example_alphafold.py  simple_api_demo.py
examples/example_data/: .gitkeep
paper/: paper.bib  paper.md
tests/: INTEGRATION_TESTING.md  conftest.py  run_complete_analysis.py  run_integration_test.py  test_conservation.py  test_integration.py  test_motif_discovery.py  test_pipeline.py  test_retrieval.py  test_stats.py  test_structure.py
